--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-rethinkdb
+aiohttp==2.3.9
+rethinkdb==2.3.0.post6
 Flask==0.12.2
 logzero==1.3.1
+-e git+https://github.com/cionkubes/rethink-wrapper@v0.2.3#egg=async-rethink
